[package]
name = "blockchain-network"
authors = ["Anirudh Konidala"]
version = "0.1.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "client"
path = "src/client.rs"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
ring = "0.17.8"
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.5.0"